# lattice-db

./: .dockerignore  .gitignore  ACID-FUTURE.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  MEDIUM_ARTICLE.md  Makefile.toml  OPTIMIZATIONS-TODO.md  OPTIMIZATION_LOG.md  README.md  SECURITY_RECOMMENDATIONS.md  SPECS.md  benchmark_batch.py  benchmark_comparison.py  benchmark_lattice.py  benchmark_mmap.py  benchmark_scann.py  deny.toml  docker-compose.yml  test_qdrant_client.py
.cargo/: config.toml
.claude/plans/: tranquil-snacking-hare.md
.github/workflows/: ci.yml  release.yml
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/api/: rest.md  rust.md  typescript.md
book/src/architecture/: crates.md  overview.md  sbio.md
book/src/contributing/: setup.md  testing.md
book/src/examples/: browser-demo.md
book/src/getting-started/: installation.md  quickstart.md  wasm.md
book/src/graph/: cypher.md  model.md  traversal.md
book/src/performance/: benchmarks.md  tuning.md
book/src/vector/: distance.md  hnsw.md  quantization.md  simd.md
crates/lattice-bench/: Cargo.toml  README.md  analyze_results.py  benchmark_results.json  plot_results.py
crates/lattice-bench/benches/: ci_regression.rs  cypher_comparison.rs  vector_comparison.rs
crates/lattice-bench/examples/: graph_profiler.rs  http_graph_profiler.rs  http_profiler.rs  quick_vector_bench.rs
crates/lattice-bench/src/: datasets.rs  http_runner.rs  http_vector_runner.rs  lattice_durable_runner.rs  lattice_runner.rs  lattice_vector_runner.rs  lib.rs  neo4j_runner.rs  qdrant_runner.rs  results.rs
crates/lattice-core/: Cargo.toml  README.md
crates/lattice-core/src/: error.rs  lib.rs  parallel.rs  storage.rs  sync.rs  transaction.rs  transport.rs
crates/lattice-core/src/cypher/: ast.rs  cypher.pest  error.rs  executor.rs  handler.rs  mod.rs  parser.rs  planner.rs  row.rs
crates/lattice-core/src/cypher/executor/: context.rs  evaluation.rs  hashing.rs  json.rs  mod.rs  operations.rs
crates/lattice-core/src/engine/: async_indexer.rs  collection.rs  mod.rs
crates/lattice-core/src/engine/collection/: builder.rs  mod.rs  native.rs  types.rs  wasm.rs
crates/lattice-core/src/graph/: mod.rs  traversal.rs
crates/lattice-core/src/index/: dense_vectors.rs  distance.rs  hnsw.rs  layer.rs  mmap_vectors.rs  mod.rs  quantization.rs  scann.rs
crates/lattice-core/src/types/: collection.rs  mod.rs  point.rs  query.rs  value.rs
crates/lattice-core/src/wal/: checkpoint_manager.rs  group_commit.rs  mod.rs
crates/lattice-core/tests/: acid_crash_scenarios.rs  acid_engine_lifecycle.rs  acid_io_failures.rs  acid_page_rotation.rs  acid_stress_ordering.rs  crash_recovery.rs  integration_test.rs
crates/lattice-server/: Cargo.toml  README.md
crates/lattice-server/src/: auth.rs  axum_transport.rs  engine_wrapper.rs  hyper_transport.rs  lib.rs  main.rs  openapi.rs  rate_limit.rs  router.rs  service_worker.rs  tls.rs  wasm_bindings.rs
crates/lattice-server/src/dto/: mod.rs  request.rs  response.rs
crates/lattice-server/src/handlers/: collections.rs  export_import.rs  mod.rs  points.rs  search.rs
crates/lattice-storage/: Cargo.toml
crates/lattice-storage/src/: disk.rs  lib.rs  mem.rs  opfs.rs
crates/lattice-test-harness/: Cargo.toml
crates/lattice-test-harness/src/: failing_storage.rs  helpers.rs  lib.rs  shared_state.rs
docs/benchmarks/: benchmark_results.json  generate_charts.py  optimization_log.md
examples/: browser-demo.html  debug-demo.html  local-test.html
examples/rag-example/: README.md  index.html  package.json  vite.config.ts
examples/rag-example/public/: style.css
examples/rag-example/public/docs/: lattice-docs.json
examples/rag-example/scripts/: generate-docs.ts
examples/rag-example/src/: documents.ts  main.ts  openrouter.ts  rag.ts  types.ts
