[workspace]
resolver = "2"
members = [
    "crates/lattice-core",
    "crates/lattice-storage",
    "crates/lattice-server",
    "crates/lattice-bench",
    "crates/lattice-test-harness",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Avarok-Cybersecurity/lattice-db"
rust-version = "1.75"

[workspace.dependencies]
# Serialization - zero-copy
rkyv = { version = "0.8", features = ["bytecheck", "smallvec-1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.14"

# Async runtime (features specified per-crate for WASM compatibility)
tokio = { version = "1" }
async-trait = "0.1"

# Collections
smallvec = { version = "1.13", features = ["serde"] }

# Parsing (WASM-compatible)
pest = "2.7"
pest_derive = "2.7"

# String optimization (WASM-compatible)
compact_str = { version = "0.8", features = ["serde", "rkyv"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Web framework (native)
axum = "0.7"
hyper = { version = "1.8", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "http1"] }
http-body-util = "0.1"

# TLS (native)
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"

# WASM (conditional)
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
wasmtimer = "0.4.3"

# Testing & benchmarking
rand = "0.8"
criterion = "0.5"
wasm-bindgen-test = "0.3"
getrandom = { version = "0.2", features = ["js"] }

# OpenAPI documentation (optional)
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

# Internal crates
lattice-core = { path = "crates/lattice-core" }
lattice-storage = { path = "crates/lattice-storage", default-features = false }
lattice-server = { path = "crates/lattice-server" }
lattice-test-harness = { path = "crates/lattice-test-harness" }

# Optimized release profile for maximum performance
[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
