[package]
name = "lattice-server"
description = "HTTP and Service Worker transport for LatticeDB"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lattice-core.workspace = true
lattice-storage.workspace = true
serde.workspace = true
serde_json.workspace = true
simd-json = { workspace = true, optional = true }
async-trait.workspace = true
thiserror.workspace = true

# Native HTTP server (Hyper - fast, or Axum - convenient)
hyper = { workspace = true, optional = true }
hyper-util = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
tokio = { workspace = true, features = ["net", "signal", "rt-multi-thread", "macros"], optional = true }

# OpenAPI documentation (optional)
utoipa = { workspace = true, optional = true }
utoipa-swagger-ui = { workspace = true, optional = true }

# WASM Service Worker
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true }
wasmtimer = { workspace = true, optional = true }

[dependencies.web-sys]
workspace = true
optional = true
features = [
    "FetchEvent",
    "Request",
    "Response",
    "ResponseInit",
    "Headers",
    "ServiceWorkerGlobalScope",
    "ExtendableEvent",
]

[dev-dependencies]
rand.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "signal"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test.workspace = true
getrandom.workspace = true

[features]
default = ["native"]
native = ["hyper", "hyper-util", "http-body-util", "tokio", "simd-json", "lattice-storage/native", "lattice-core/simd"]
axum-transport = ["native", "axum"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "web-sys", "js-sys", "serde-wasm-bindgen", "console_error_panic_hook", "wasmtimer", "lattice-storage/wasm"]
openapi = ["native", "utoipa", "utoipa-swagger-ui"]
simd = ["lattice-core/simd"]
mmap = ["lattice-core/mmap"]

[[bin]]
name = "lattice-server"
path = "src/main.rs"
required-features = ["native"]
