[package]
name = "lattice-test-harness"
description = "Test infrastructure for LatticeDB ACID testing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lattice-core.workspace = true
async-trait.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["sync", "rt"] }
